# instagnite

./: .gitignore  LICENSE  README.md  example .env  example credentials.json  mqtt.js  package-lock.json  package.json  pyproject.toml
ai_instructions/: basic.txt  stop_responding.txt
app/: main.py
app/api/v1/: notifications.py
app/commands/: chat.py  test.py
app/core/: config.py  logger.py  paths.py  registry.py
app/db/: schema.py
app/models/: ai.py  config.py  instagram.py  notifications.py
app/services/: ai.py  database.py  files.py  instagram.py  notifications.py  queue.py
recording.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
